--- a/LearnKotlin/app/src/main/AndroidManifest.xml
+++ b/LearnKotlin/app/src/main/AndroidManifest.xml
@@ -13,23 +13,35 @@
         android:theme="@style/Theme.LearnKotlin"
         tools:targetApi="31">
         <activity
+            android:name=".UIComponentActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".SecondActivity"
             android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
+
             <intent-filter tools:ignore="AppLinkUrlError">
-<!--                <action android:name="com.cuixuesen.helloworld.ACTION_START" />-->
-<!--                <category android:name="android.intent.category.DEFAULT" />-->
-<!--                <category android:name="com.cuixuesen.helloworld.MY_CATEGORY" />-->
+
+                <!-- <action android:name="com.cuixuesen.helloworld.ACTION_START" /> -->
+                <!-- <category android:name="android.intent.category.DEFAULT" /> -->
+                <!-- <category android:name="com.cuixuesen.helloworld.MY_CATEGORY" /> -->
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:scheme="https" />
             </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -40,6 +52,11 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        <activity android:name=".LifeCycleActivity" />
+        <activity
+            android:name=".DialogLifeCycleActivity"
+            android:theme="@style/Theme.AppCompat.Dialog" />
+        <activity android:name=".NormalLifeCycleActivity" />
     </application>
 
 </manifest>
