--- a/LearnKotlin/app/src/main/AndroidManifest.xml
+++ b/LearnKotlin/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.LearnKotlin"
         tools:targetApi="31">
         <activity
+            android:name=".tools.GuideMIUISettingsActivity"
+            android:exported="true">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+        </activity>
+        <activity
             android:name=".fragment.NewsContentActivity"
             android:exported="false">
             <meta-data
