--- a/webpack23.8.30/package.json
+++ b/webpack23.8.30/package.json
@@ -13,10 +13,14 @@
   "devDependencies": {
     "css-loader": "^6.8.1",
     "extract-text-webpack-plugin": "^3.0.2",
+    "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "html-loader": "^4.2.0"
   }
 }
