--- a/webpack5/package.json
+++ b/webpack5/package.json
@@ -12,6 +12,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.22.11",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.22.10",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.22.14",
+    "@babel/preset-react": "^7.22.5",
+    "babel-loader": "^9.1.3",
     "css-loader": "5.0.1",
     "file-loader": "^6.2.0",
     "html-loader": "^4.2.0",
