--- a/webpack5/package.json
+++ b/webpack5/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve"
+    "start": "webpack serve",
+    "learnPath": "webpack serve --config ./learnPath/webpack.config.js"
   },
   "keywords": [],
   "author": "",
@@ -19,13 +20,18 @@
     "@babel/preset-env": "^7.22.14",
     "@babel/preset-react": "^7.22.5",
     "babel-loader": "^9.1.3",
+    "core-js": "^3.32.1",
     "css-loader": "5.0.1",
+    "expose-loader": "^4.1.0",
     "file-loader": "^6.2.0",
     "html-loader": "^4.2.0",
+    "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^5.5.3",
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
     "raw-loader": "^4.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sass": "^1.66.1",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
@@ -33,5 +39,8 @@
     "webpack": "^5.78.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
