--- a/webpack5/package.json
+++ b/webpack5/package.json
@@ -7,6 +7,7 @@
     "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve",
+    "start2": "cross-env NODE_ENV=development webpack serve --env=development",
     "learnPath": "webpack serve --config ./learnPath/webpack.config.js"
   },
   "keywords": [],
@@ -21,6 +22,7 @@
     "@babel/preset-react": "^7.22.5",
     "babel-loader": "^9.1.3",
     "core-js": "^3.32.1",
+    "cross-env": "^7.0.3",
     "css-loader": "5.0.1",
     "expose-loader": "^4.1.0",
     "file-loader": "^6.2.0",
