--- a/webpack5/package.json
+++ b/webpack5/package.json
@@ -17,10 +17,15 @@
     "@babel/core": "^7.22.11",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-decorators": "^7.22.10",
+    "@babel/plugin-transform-runtime": "^7.22.10",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.22.14",
     "@babel/preset-react": "^7.22.5",
+    "@babel/runtime-corejs2": "^7.22.11",
+    "@babel/runtime-corejs3": "^7.22.11",
     "babel-loader": "^9.1.3",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-runtime": "^6.26.0",
     "core-js": "^3.32.1",
     "cross-env": "^7.0.3",
     "css-loader": "5.0.1",
