--- a/webpack5/package.json
+++ b/webpack5/package.json
@@ -31,6 +31,7 @@
     "css-loader": "5.0.1",
     "expose-loader": "^4.1.0",
     "file-loader": "^6.2.0",
+    "filemanager-webpack-plugin": "^8.0.0",
     "html-loader": "^4.2.0",
     "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^5.5.3",
