--- a/webpack5/package.json
+++ b/webpack5/package.json
@@ -26,10 +26,13 @@
     "babel-loader": "^9.1.3",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-runtime": "^6.26.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.32.1",
     "cross-env": "^7.0.3",
     "css-loader": "5.0.1",
     "expose-loader": "^4.1.0",
+    "express": "^4.18.2",
     "file-loader": "^6.2.0",
     "filemanager-webpack-plugin": "^8.0.0",
     "html-loader": "^4.2.0",
@@ -46,6 +49,7 @@
     "url-loader": "^4.1.1",
     "webpack": "^5.78.0",
     "webpack-cli": "^5.0.1",
+    "webpack-dev-middleware": "^6.1.1",
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
