--- a/webpack5/package.json
+++ b/webpack5/package.json
@@ -40,6 +40,7 @@
     "html-webpack-plugin": "^5.5.3",
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
+    "mini-css-extract-plugin": "^2.7.6",
     "raw-loader": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
