--- a/webpack5/package.json
+++ b/webpack5/package.json
@@ -41,12 +41,17 @@
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
     "mini-css-extract-plugin": "^2.7.6",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "postcss-loader": "^7.3.3",
+    "postcss-preset-env": "^9.1.3",
+    "px2rem-loader": "^0.1.9",
     "raw-loader": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.66.1",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
+    "terser-webpack-plugin": "^5.3.9",
     "url-loader": "^4.1.1",
     "webpack": "^5.78.0",
     "webpack-cli": "^5.0.1",
