--- a/webpack23.09.09/package.json
+++ b/webpack23.09.09/package.json
@@ -12,7 +12,10 @@
   "devDependencies": {
     "@babel/core": "^7.22.17",
     "@babel/preset-env": "^7.22.15",
+    "babel-loader": "^9.1.3",
+    "filemanager-webpack-plugin": "^8.0.0",
     "html-webpack-plugin": "^5.5.3",
+    "loader-runner": "^4.3.0",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   }
