--- a/webpack23.09.09/package.json
+++ b/webpack23.09.09/package.json
@@ -13,9 +13,13 @@
     "@babel/core": "^7.22.17",
     "@babel/preset-env": "^7.22.15",
     "babel-loader": "^9.1.3",
+    "file-loader": "^6.2.0",
     "filemanager-webpack-plugin": "^8.0.0",
     "html-webpack-plugin": "^5.5.3",
     "loader-runner": "^4.3.0",
+    "loader-utils": "^3.2.1",
+    "mime": "^3.0.0",
+    "url-loader": "^4.1.1",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   }
