--- a/webpack23.09.09/package.json
+++ b/webpack23.09.09/package.json
@@ -13,12 +13,17 @@
     "@babel/core": "^7.22.17",
     "@babel/preset-env": "^7.22.15",
     "babel-loader": "^9.1.3",
+    "core-js": "^3.32.2",
+    "css-loader": "5.0.1",
     "file-loader": "^6.2.0",
     "filemanager-webpack-plugin": "^8.0.0",
     "html-webpack-plugin": "^5.5.3",
+    "less": "^4.2.0",
+    "less-loader": "^11.1.3",
     "loader-runner": "^4.3.0",
     "loader-utils": "^3.2.1",
     "mime": "^3.0.0",
+    "style-loader": "^3.3.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
