--- a/webpack23.09.09/package.json
+++ b/webpack23.09.09/package.json
@@ -21,7 +21,7 @@
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
     "loader-runner": "^4.3.0",
-    "loader-utils": "^3.2.1",
+    "loader-utils": "2.0.1",
     "mime": "^3.0.0",
     "style-loader": "^3.3.3",
     "url-loader": "^4.1.1",
