--- a/webpack23.09.09/package.json
+++ b/webpack23.09.09/package.json
@@ -15,6 +15,8 @@
     "babel-loader": "^9.1.3",
     "core-js": "^3.32.2",
     "css-loader": "5.0.1",
+    "css-selector-tokenizer": "^0.8.0",
+    "css-tree": "^2.3.1",
     "file-loader": "^6.2.0",
     "filemanager-webpack-plugin": "^8.0.0",
     "html-webpack-plugin": "^5.5.3",
@@ -23,6 +25,7 @@
     "loader-runner": "^4.3.0",
     "loader-utils": "2.0.1",
     "mime": "^3.0.0",
+    "postcss": "^8.4.29",
     "style-loader": "^3.3.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.88.2",
