--- a/ast/package.json
+++ b/ast/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@babel/core": "^7.22.20",
     "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
+    "babel-plugin-transform-es2015-classes": "^6.24.1",
     "babel-types": "^6.26.0",
     "escodegen": "^2.1.0",
     "esprima": "^4.0.1",
