--- a/ast/package.json
+++ b/ast/package.json
@@ -18,6 +18,7 @@
     "escodegen": "^2.1.0",
     "esprima": "^4.0.1",
     "estraverse": "^5.3.0",
+    "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
