--- a/ast/package.json
+++ b/ast/package.json
@@ -18,10 +18,10 @@
     "escodegen": "^2.1.0",
     "esprima": "^4.0.1",
     "estraverse": "^5.3.0",
-    "html-webpack-plugin": "^5.5.3",
+    "html-webpack-plugin": "4.5.0",
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
+    "webpack": "4.44.2",
+    "webpack-cli": "3.3.5"
   }
 }
