--- a/webpack-hand/package.json
+++ b/webpack-hand/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "tapable": "1.1.1",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   }
