--- a/webpack-hand/package.json
+++ b/webpack-hand/package.json
@@ -11,6 +11,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-generator": "^6.26.1",
+    "babel-traverse": "^6.26.0",
+    "babel-types": "^6.26.0",
+    "neo-async": "^2.6.2",
     "tapable": "1.1.1",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
