--- a/webpack-hand/package.json
+++ b/webpack-hand/package.json
@@ -14,6 +14,8 @@
     "babel-generator": "^6.26.1",
     "babel-traverse": "^6.26.0",
     "babel-types": "^6.26.0",
+    "ejs": "^3.1.9",
+    "mkdirp": "^3.0.1",
     "neo-async": "^2.6.2",
     "tapable": "1.1.1",
     "webpack": "^5.88.2",
