--- a/webpack-hand/package.json
+++ b/webpack-hand/package.json
@@ -18,7 +18,7 @@
     "mkdirp": "^3.0.1",
     "neo-async": "^2.6.2",
     "tapable": "1.1.1",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
+    "webpack": "4.44.2",
+    "webpack-cli": "3.3.5"
   }
 }
