--- a/webpack-hand/package.json
+++ b/webpack-hand/package.json
@@ -16,6 +16,7 @@
     "babel-types": "^6.26.0",
     "ejs": "^3.1.9",
     "isarray": "^2.0.5",
+    "less": "^4.2.0",
     "mkdirp": "^3.0.1",
     "neo-async": "^2.6.2",
     "tapable": "1.1.1",
