--- a/webpackAndCompile/webpack23.10.07/package.json
+++ b/webpackAndCompile/webpack23.10.07/package.json
@@ -17,7 +17,8 @@
     "html-webpack-plugin": "^4.5.2",
     "shelljs": "^0.8.5",
     "webpack": "4.44.2",
-    "webpack-cli": "3.3.5"
+    "webpack-cli": "3.3.5",
+    "babel-utils": "2.0.0"
   },
   "dependencies": {}
 }
