--- a/React/react23.10.16/package.json
+++ b/React/react23.10.16/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jquery": "^3.7.1",
+    "jquery": "3.5.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-scripts": "4.0.3"
