--- a/React/react23.11.11/package.json
+++ b/React/react23.11.11/package.json
@@ -11,12 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "history": "^4.9.0",
+    "path-to-regexp": "6.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-scripts": "4.0.1",
+    "react-router": "5.3.4",
     "react-router-dom": "5.3.4",
-    "history": "^4.9.0",
-    "react-router": "5.3.4"
+    "react-scripts": "4.0.1"
   },
   "browserslist": {
     "production": [
