--- a/React/react23.11.11/package.json
+++ b/React/react23.11.11/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "react-scripts start"
+    "start": "export NODE_OPTIONS=--openssl-legacy-provider && set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start"
   },
   "keywords": [],
   "author": "",
