--- a/React/react23.11.11/package.json
+++ b/React/react23.11.11/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "export NODE_OPTIONS=--openssl-legacy-provider && set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start"
+    "start19": "export NODE_OPTIONS=--openssl-legacy-provider && set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "start14": "react-scripts start"
   },
   "keywords": [],
   "author": "",
