--- a/typescript/todolist/package.json
+++ b/typescript/todolist/package.json
@@ -20,6 +20,7 @@
     "@types/react-swipe": "6.0.0",
     "@types/react-transition-group": "4.4.0",
     "@types/redux-logger": "3.0.8",
+    "@types/history": "4.7.2",
     "connected-react-router": "6.8.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -29,7 +30,8 @@
     "react-transition-group": "4.4.1",
     "redux": "4.0.5",
     "redux-thunk": "2.4.0",
-    "redux-logger": "4.0.0"
+    "redux-logger": "4.0.0",
+    "history": "4.7.2"
   },
   "devDependencies": {
     "webpack": "4.44.1",
