--- a/typescript/todolist/package.json
+++ b/typescript/todolist/package.json
@@ -31,7 +31,13 @@
     "redux": "4.0.5",
     "redux-thunk": "2.4.0",
     "redux-logger": "4.0.0",
-    "history": "4.7.2"
+    "history": "4.7.2",
+    "express": "4.17.1",
+    "body-parser": "1.19.0",
+    "axios": "0.19.0",
+    "qs": "6.9.0",
+    "@types/qs": "6.9.0",
+    "parse-headers": "2.0.3"
   },
   "devDependencies": {
     "webpack": "4.44.1",
