--- a/typescript/myLesson/package.json
+++ b/typescript/myLesson/package.json
@@ -22,11 +22,13 @@
     "@types/react-transition-group": "4.2.3",
     "@types/redux-logger": "3.0.7",
     "@types/redux-promise": "0.5.28",
+    "@types/history": "4.7.2",
     "antd": "3.23.6",
     "axios": "0.19.0",
     "body-parser": "1.19.0",
     "connect-mongo": "3.0.0",
     "connected-react-router": "6.3.1",
+    "history": "4.7.2",
     "cors": "2.8.5",
     "express": "4.17.1",
     "express-session": "1.17.0",
