--- a/typescript/todolist/package.json
+++ b/typescript/todolist/package.json
@@ -22,6 +22,7 @@
     "@types/redux-logger": "3.0.8",
     "@types/history": "4.7.2",
     "connected-react-router": "6.3.1",
+    "history": "4.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-redux": "6.0.0",
