--- a/typescript/myLesson/package.json
+++ b/typescript/myLesson/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/history": "4.7.2",
     "@types/qs": "6.5.3",
     "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
@@ -22,16 +23,16 @@
     "@types/react-transition-group": "4.2.3",
     "@types/redux-logger": "3.0.7",
     "@types/redux-promise": "0.5.28",
-    "@types/history": "4.7.2",
     "antd": "3.23.6",
     "axios": "0.19.0",
     "body-parser": "1.19.0",
+    "classnames": "^2.2.6",
     "connect-mongo": "3.0.0",
     "connected-react-router": "6.3.1",
-    "history": "4.7.2",
     "cors": "2.8.5",
     "express": "4.17.1",
     "express-session": "1.17.0",
+    "history": "4.7.2",
     "mongoose": "5.7.4",
     "multer": "1.4.2",
     "qs": "6.9.0",
@@ -47,6 +48,7 @@
     "redux-thunk": "2.3.0"
   },
   "devDependencies": {
+    "@types/classnames": "^2.3.0",
     "css-loader": "3.2.0",
     "file-loader": "4.2.0",
     "html-webpack-plugin": "3.2.0",
